tests/ui/enum_align_unsupported.stderr
error: repr(align) on enums is not supported
 --> $DIR/enum_align_unsupported.rs:3:5
  |
3 | /     #[repr(align(2))]
4 | |     enum Bad {
5 | |         A,
6 | |     }
  | |_____^
